EI-11 GET batches/{id} endpoint
Connected the batches/{id} endpoint to the database. Tested that it works using Postman. Updated Unit Tests also